syntax = "proto3";

package control_service;

message PingMessage {  }
message PongMessage {  }
